# Linkedin_Searching-Job

./: .env.example  .gitignore  README.md
backend/: app.db  app.db-shm  app.db-wal  desktop_entry.py  requirements.txt  test_runtime.db
backend/app/: __init__.py  config.py  db.py  db_migrations.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  cv.py  insights.py  interactions.py  scheduler.py  searches.py  sessions.py  settings.py
backend/app/services/: bne_scraper.py  cv_extract.py  cv_summary.py  desktop_bootstrap.py  empleos_publicos_scraper.py  insights_service.py  job_ai_service.py  job_sources.py  learning_service.py  linkedin_scraper.py  market_demand_service.py  matcher.py  profile_ai_service.py  runtime_settings.py  scheduler_service.py  (+2 more)
backend/scripts/: build_backend_binary.sh
backend/tests/: test_cv_summary.py  test_feedback_loop.py  test_linkedin_scraper_utils.py  test_llm_provider_factory.py  test_matcher.py  test_profile_ai_service.py  test_search_flow.py  test_sessions.py  test_settings_llm.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
frontend/: package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/app/: globals.css  layout.js  page.js
scripts/: build_seekjob_desktop_macos.sh  dev_seekjob_desktop.sh
(+68 files in other folders)
