[package]
name = "seekjob_desktop"
version = "0.1.0"
description = "SeekJob desktop app"
authors = ["SeekJob"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
